Fix blocklist duplicate crash — switch Set.of() to HashSet
Set.of() throws on any duplicate entry. Replaced with
Collections.unmodifiableSet(new HashSet<>(Arrays.asList(...)))
which silently deduplicates, making the blocklist robust to future edits.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>